@@ -25,7 +25,7 @@
 
 package org.geysermc.geyser.command.defaults;
 
-import com.fasterxml.jackson.databind.JsonNode;
+import com.google.gson.JsonObject;
 import org.geysermc.geyser.GeyserImpl;
 import org.geysermc.geyser.api.util.MinecraftVersion;
 import org.geysermc.geyser.api.util.PlatformType;
@@ -49,16 +49,16 @@ public class VersionCommand extends GeyserCommand {
     static {
         List<MinecraftVersion> bedrockVersions = GameProtocol.SUPPORTED_BEDROCK_VERSIONS;
         if (bedrockVersions.size() > 1) {
-            SUPPORTED_BEDROCK_RANGE = bedrockVersions.get(0).versionString() + " - " + bedrockVersions.get(bedrockVersions.size() - 1).versionString();
+            SUPPORTED_BEDROCK_RANGE = bedrockVersions.getFirst().versionString() + " - " + bedrockVersions.getLast().versionString();
         } else {
-            SUPPORTED_BEDROCK_RANGE = bedrockVersions.get(0).versionString();
+            SUPPORTED_BEDROCK_RANGE = bedrockVersions.getFirst().versionString();
         }
 
         List<String> javaVersions = GameProtocol.getJavaVersions();
         if (javaVersions.size() > 1) {
-            SUPPORTED_JAVA_RANGE = javaVersions.get(0) + " - " + javaVersions.get(javaVersions.size() - 1);
+            SUPPORTED_JAVA_RANGE = javaVersions.getFirst() + " - " + javaVersions.getLast();
         } else {
-            SUPPORTED_JAVA_RANGE = javaVersions.get(0);
+            SUPPORTED_JAVA_RANGE = javaVersions.getFirst();
         }
     }
 
@@ -77,7 +77,7 @@ public class VersionCommand extends GeyserCommand {
                 GeyserImpl.NAME, GeyserImpl.VERSION, SUPPORTED_JAVA_RANGE, SUPPORTED_BEDROCK_RANGE));
 
         // Disable update checking in dev mode and for players in Geyser Standalone
-        if (!GeyserImpl.getInstance().isProductionEnvironment() || (!source.isConsole() && geyser.getPlatformType() == PlatformType.STANDALONE)) {
+        if (!GeyserImpl.getInstance().isProductionEnvironment() || (!source.isConsole() && geyser.platformType() == PlatformType.STANDALONE)) {
             return;
         }
 
@@ -89,8 +89,8 @@ public class VersionCommand extends GeyserCommand {
         source.sendMessage(GeyserLocale.getPlayerLocaleString("geyser.commands.version.checking", source.locale()));
         try {
             int buildNumber = this.geyser.buildNumber();
-            JsonNode response = WebUtils.getJson("https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest");
-            int latestBuildNumber = response.get("build").asInt();
+            JsonObject response = WebUtils.getJson("https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest");
+            int latestBuildNumber = response.get("build").getAsInt();
 
             if (latestBuildNumber == buildNumber) {
                 source.sendMessage(GeyserLocale.getPlayerLocaleString("geyser.commands.version.no_updates", source.locale()));
