@@ -25,20 +25,26 @@
 
 package org.geysermc.geyser.scoreboard.network.util;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.when;
 
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 import org.cloudburstmc.protocol.bedrock.packet.BedrockPacket;
+import org.geysermc.api.Geyser;
 import org.geysermc.geyser.GeyserImpl;
-import org.geysermc.geyser.configuration.GeyserConfiguration;
-import org.geysermc.geyser.registry.Registries;
+import org.geysermc.geyser.api.GeyserApi;
+import org.geysermc.geyser.configuration.GeyserConfig;
+import org.geysermc.geyser.event.GeyserEventBus;
 import org.geysermc.geyser.session.GeyserSession;
 import org.geysermc.geyser.translator.protocol.PacketTranslator;
 import org.mockito.Mockito;
+import org.mockito.invocation.InvocationOnMock;
 
 public class GeyserMockContext {
     private final List<Object> mocksAndSpies = new ArrayList<>();
@@ -49,17 +55,28 @@ public class GeyserMockContext {
         var context = new GeyserMockContext();
 
         var geyserImpl = context.mock(GeyserImpl.class);
-        var config = context.mock(GeyserConfiguration.class);
-
-        when(config.getScoreboardPacketThreshold()).thenReturn(1_000);
-
-        when(geyserImpl.getConfig()).thenReturn(config);
+        var config = context.mock(GeyserConfig.class);
+        when(geyserImpl.config()).thenReturn(config);
+        var advancedConfig = context.mock(GeyserConfig.AdvancedConfig.class);
+        when(config.advanced()).thenReturn(advancedConfig);
+        when(advancedConfig.scoreboardPacketThreshold()).thenReturn(1_000);
 
         var logger = context.storeObject(new EmptyGeyserLogger());
         when(geyserImpl.getLogger()).thenReturn(logger);
+        // Copied from standalone bootstrap
+        when(geyserImpl.configDirectory()).thenReturn(Paths.get(System.getProperty("user.dir")));
 
-        try (var geyserImplMock = mockStatic(GeyserImpl.class)) {
+        var eventBus = new GeyserEventBus();
+        when(geyserImpl.eventBus()).thenReturn(eventBus);
+
+        // GeyserEntityDataTypes static fields call Identifier.of(), which goes through GeyserApi.api().provider()
+        doAnswer(InvocationOnMock::callRealMethod).when(geyserImpl).provider(any(Class.class), any(), any());
+
+        try (var geyserImplMock = mockStatic(GeyserImpl.class);
+             var geyserMock = mockStatic(Geyser.class)) {
             geyserImplMock.when(GeyserImpl::getInstance).thenReturn(geyserImpl);
+            // GeyserApi.api() calls Geyser.api(GeyserApi.class); stub it to return our mock
+            geyserMock.when(() -> Geyser.api(GeyserApi.class)).thenReturn(geyserImpl);
 
             geyserContext.accept(context);
         }
@@ -125,7 +142,7 @@ public class GeyserMockContext {
         if (packets.isEmpty()) {
             return null;
         }
-        return packets.remove(0);
+        return packets.removeFirst();
     }
 
     public List<BedrockPacket> packets() {
